<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_app">About this app</string>
    <string name="ad_indicator_badge">Ad</string>
    <string name="ad_indicator_label">Ad by Etsy seller</string>
    <string name="add">Add</string>
    <string name="add_address_title">Add address</string>
    <string name="add_card_replan_error_desc">Please try another card.</string>
    <string name="add_card_replan_error_header">We had trouble confirming this card</string>
    <string name="add_listing_to_collection_content_description">Add %s to collection</string>
    <string name="add_multiple_listings_to_collection_alert">Added to %d collections</string>
    <string name="add_new_address">Add a new address</string>
    <string name="add_single_listing_to_collection_alert">Added to %s</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_cart_interstitial_section_title">Related items you may like</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="add_to_collection_prompt">Add to collection?</string>
    <string name="add_to_favorites">Add %s to favorites</string>
    <string name="add_video_error">Sorry, we couldn’t upload your video.</string>
    <string name="added_to_cart_confirmation">Added!</string>
    <string name="additional_information_sentence">Additional information</string>
    <string name="address_confirmation_header">We found a match for your address</string>
    <string name="address_confirmation_subheader">"We couldn't verify your entry but recommend this match"</string>
    <string name="address_delete_dialog_deletebutton">Delete address</string>
    <string name="address_delete_dialog_subtitle">This cannot be undone.</string>
    <string name="admin_toolbar_title">Use admin toolbar</string>
    <string name="cart_tab_desc5">Cart tab, 5 of 5</string>
    <string name="collection_error_state_body">Please try again later.</string>
    <string name="collection_error_state_heading_v2">Unable to load collection</string>
    <string name="config_api_features_date_override_summary">"Adds a 'features_date' query parameter to all API requests. Set this to override the date of the request to test server-side configs that have a time range eligibility"</string>
    <string name="config_api_features_override_summary">"Adds a 'features' query parameter to all API requests. Set this to override server-side configs"</string>
    <string name="config_build_branch">config_build_branch</string>
    <string name="config_build_branch_title">Branch</string>
    <string name="config_build_date">config_build_date</string>
    <string name="config_build_date_title">Built at</string>
    <string name="config_build_hash">config_build_hash</string>
    <string name="config_build_hash_title">Commit hash</string>
    <string name="config_build_info">Build info</string>
    <string name="config_build_version">config_build_version</string>
    <string name="config_build_version_title">Build version</string>
    <string name="config_features_date_override">features_date_override</string>
    <string name="config_features_override">features_override</string>
    <string name="config_locale">config_locale</string>
    <string name="config_locale_clear">config_locale</string>
    <string name="config_output_json_to_logcat">Print all request responses to JSON</string>
    <string name="config_pref_event_horizon_title">Show event horizon</string>
    <string name="config_prefs_admin_toolbar">config_prefs_admin_toolbar</string>
    <string name="config_prefs_category_title">Env settings</string>
    <string name="config_prefs_dev_proxy">dev_proxy</string>
    <string name="config_prefs_dev_proxy_title">Dev proxy</string>
    <string name="config_prefs_environment">config_prefs_environment</string>
    <string name="config_prefs_environment_title">Environment</string>
    <string name="config_prefs_event_horizon">config_prefs_event_horizon</string>
    <string name="config_prefs_output_json">config_prefs_output_json</string>
    <string name="config_prefs_prod_value">production</string>
    <string name="config_prefs_vm">config_prefs_vm</string>
    <string name="config_prefs_vm_title">VM</string>
    <string name="config_prefs_xdebug_ide">config_prefs_xdebug_ide</string>
    <string name="config_prefs_xdebug_ide_title">IDE (param)</string>
    <string name="config_prefs_xdebug_title">XDebug settings</string>
    <string name="config_prefs_xdebug_toggle">config_prefs_xdebug_toggle</string>
    <string name="config_prefs_xdebug_toggle_title">Toggle XDebug</string>
    <string name="config_refresh_server_info">config_prefs_flags_reset</string>
    <string name="config_refresh_server_info_title">Refresh server config</string>
    <string name="config_section_networking">Networking</string>
    <string name="config_send_all_logs">config_send_all_logs</string>
    <string name="config_test_anr_reporting">config_test_anr_reporting</string>
    <string name="config_test_crash_reporting">config_test_crash_reporting</string>
    <string name="config_wipe_logs">config_wipe_logs</string>
    <string name="credit_card_name_amex">American Express</string>
    <string name="credit_card_name_discover">Discover</string>
    <string name="credit_card_name_googlepay">Google Pay</string>
    <string name="credit_card_name_mastercard">Mastercard</string>
    <string name="credit_card_name_visa">VISA</string>
    <string name="dark_mode_follow_system">Follow system</string>
    <string name="dark_mode_off">Off</string>
    <string name="dark_mode_on">On</string>
    <string name="etsy_gift_cards">Etsy gift cards</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_listing_content_description">Favorite Listing</string>
    <string name="favorites_tab_desc5">Favorites tab, 2 of 5</string>
    <string name="gift_options_gift_message">Add gift message for free</string>
    <string name="gift_options_gift_message_hint">Enter your message</string>
    <string name="gift_options_gift_price_hidden">Prices will be hidden when shipped</string>
    <string name="gift_options_gift_wrap_details">Details</string>
    <string name="gift_options_marked_gift">This order is a gift</string>
    <string name="gift_options_title">Gift (optional)</string>
    <string name="home_tab_desc5">Home tab, 1 of 5</string>
    <string name="listing_panel_see_more">See more</string>
    <string name="loading">Loading</string>
    <string name="logs_send_all">Upload all analytics logs</string>
    <string name="logs_wipe_all">Wipe all analytics logs</string>
    <string name="menu_contact_shop">Contact Shop</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_button">Share Button</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_home">Home</string>
    <string name="nav_updates">Updates</string>
    <string name="nav_you">You</string>
    <string name="payment_method_label_paypal">PayPal</string>
    <string name="paypal_checkout_crypto_got_it_button">Got it</string>
    <string name="paypal_checkout_crypto_refunds_details_text">Refunds are issued to your PayPal balance in the primary account currency, not in crypto.</string>
    <string name="paypal_checkout_crypto_refunds_details_title">Refunds go to your PayPal balance</string>
    <string name="paypal_checkout_crypto_sales_details_text">You’ll receive regular account statements to help you report gains or losses on your taxes.</string>
    <string name="paypal_checkout_crypto_sales_details_title">Crypto sales are taxable</string>
    <string name="paypal_checkout_crypto_terms_and_conditions">Full crypto terms and conditions</string>
    <string name="paypal_checkout_see_crypto_to_pay_title">"We'll sell your crypto to pay"</string>
    <string name="paypal_checkout_we_sell_your_crypto_to_pay_details_text_one">If you don’t complete the purchase, the money from your crypto sale will go into your PayPal balance.</string>
    <string name="paypal_checkout_we_sell_your_crypto_to_pay_details_text_two">If the merchant adds tax or shipping later, we’ll try covering the cost with your PayPal balance first and then your backup payment method.</string>
    <string name="qualtrics_force_prompt">qualtrics_force_prompt</string>
    <string name="qualtrics_force_prompt_title">Force Qualtrics prompt presentation</string>
    <string name="structured_shipping_customs_duties_fees">Customs and import taxes</string>
    <string name="structured_shipping_customs_duties_fees_info">"Buyers are responsible for any customs and import taxes that may apply. I'm not responsible for delays due to customs."</string>
    <string name="structured_shipping_estimated_time">Estimated shipping times</string>
    <string name="structured_shipping_message">"I'll do my best to meet these shipping estimates, but cannot guarantee them. Actual delivery time will depend on the shipping method you choose."</string>
    <string name="structured_shipping_processing_time">Processing time</string>
    <string name="throw_test_exception">Throw test exception</string>
    <string name="trigger_test_anr">Trigger test ANR</string>
    <string name="trigger_test_anr_summary">This will freeze the screen for 10s. Attempt to scroll this page after pressing to trigger the ANR dialog.</string>
    <string name="try_again">Try again</string>
    <string name="updates_tab_desc5">Updates tab, 3 of 5</string>
    <string name="you_tab_desc5">You tab, 4 of 5</string>
</resources>