<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/clg_icon_core_chat_v1" android:id="@id/menu_contact_shop" android:title="@string/menu_contact_shop" app:contentDescription="@string/menu_contact_shop" app:showAsAction="always" />
    <item android:icon="@drawable/clg_icon_core_androidshare_v1" android:id="@id/menu_share" android:title="@string/menu_share" app:contentDescription="@string/menu_share_button" app:showAsAction="always" />
    <item android:icon="@drawable/clg_icon_core_heart_v1" android:id="@id/menu_fav" android:title="@string/favorite" app:actionViewClass="android.widget.ImageButton" app:contentDescription="@string/favorite_listing_content_description" app:showAsAction="always" />
</menu>