<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/icons_credit_cards" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/icon_mastercard" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cc_mastercard" android:scaleType="center" android:contentDescription="@string/credit_card_name_mastercard" android:layout_marginEnd="@dimen/fixed_small" />
        <ImageView android:id="@id/icon_amex" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cc_amex" android:scaleType="center" android:contentDescription="@string/credit_card_name_amex" android:layout_marginEnd="@dimen/fixed_small" />
        <ImageView android:id="@id/icon_discover" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cc_discover" android:scaleType="center" android:contentDescription="@string/credit_card_name_discover" android:layout_marginEnd="@dimen/fixed_small" />
        <ImageView android:id="@id/icon_visa" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cc_visa" android:scaleType="center" android:contentDescription="@string/credit_card_name_visa" />
    </LinearLayout>
    <ImageView android:id="@id/icon_gpay" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:contentDescription="@string/credit_card_name_googlepay" app:srcCompat="@drawable/cc_google_pay" />
    <ImageView android:id="@id/icon_paypal" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/cc_paypal" android:scaleType="center" android:contentDescription="@string/payment_method_label_paypal" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/section_giftcards" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/icon_giftcard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/fixed_small" android:src="@drawable/cc_gift_card" android:scaleType="center" android:importantForAccessibility="no" />
        <TextView android:textColor="?clg_color_text_secondary" android:id="@id/label_giftcards" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/etsy_gift_cards" android:labelFor="@id/icon_giftcard" style="@style/clg_text_body_small" />
    </LinearLayout>
</merge>