<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/root_view" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@id/swipe_refresh_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_view" android:scrollbars="vertical" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.etsy.android.stylekit.views.CollageEmptyStateView android:layout_gravity="center" android:id="@id/empty_state_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:clg_bodyText="@string/collection_error_state_body" app:clg_iconSrc="@drawable/clg_icon_brand_alert_v2" app:clg_primaryButtonText="@string/try_again" app:clg_titleText="@string/collection_error_state_heading_v2" />
    <com.etsy.android.stylekit.views.LoadingIndicatorView android:layout_gravity="center" android:id="@id/loading_indicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/loading" app:isLarge="true" />
</FrameLayout>