<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:padding="@dimen/padding_16x" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="com.paypal.pyplcheckout.customviews.AutoCloseBottomSheetBehavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/crypto_terms_scroll_view" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:id="@id/crypto_sell_title" android:paddingTop="@dimen/padding_8x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paypal_checkout_see_crypto_to_pay_title" android:textAlignment="center" style="@style/PYPLTextViewTitle1Style" />
            <TextView android:id="@id/crypto_sell_info_text_one" android:paddingTop="@dimen/padding_24x" android:paddingBottom="@dimen/padding_24x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paypal_checkout_we_sell_your_crypto_to_pay_details_text_one" style="@style/PYPLTextViewBody2Style" />
            <TextView android:id="@id/crypto_sell_info_text_two" android:paddingBottom="@dimen/padding_24x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paypal_checkout_we_sell_your_crypto_to_pay_details_text_two" style="@style/PYPLTextViewBody2Style" />
            <TextView android:textStyle="bold" android:id="@id/crypto_refunds_title" android:paddingTop="@dimen/padding_8x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paypal_checkout_crypto_refunds_details_title" android:textAlignment="center" style="@style/PYPLTextViewTitle1Style" />
            <TextView android:id="@id/crypto_refunds_info" android:paddingTop="@dimen/padding_24x" android:paddingBottom="@dimen/padding_24x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paypal_checkout_crypto_refunds_details_text" style="@style/PYPLTextViewBody2Style" />
            <TextView android:textStyle="bold" android:id="@id/crypto_sales_title" android:paddingTop="@dimen/padding_8x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paypal_checkout_crypto_sales_details_title" android:textAlignment="center" style="@style/PYPLTextViewTitle1Style" />
            <TextView android:id="@id/crypto_sales_info" android:paddingTop="@dimen/padding_24x" android:paddingBottom="@dimen/padding_24x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paypal_checkout_crypto_sales_details_text" style="@style/PYPLTextViewBody2Style" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:id="@id/button_space_wrapper" android:background="@color/white_color" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/padding_16x" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/crypto_terms_scroll_view">
        <com.paypal.pyplcheckout.home.view.customviews.PayPalActionButton android:id="@id/crypto_consent_got_it_action_button" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/paypal_checkout_crypto_got_it_button" android:layout_centerInParent="true" android:layout_marginStart="@dimen/margin_48x" android:layout_marginEnd="@dimen/margin_48x" />
    </RelativeLayout>
    <TextView android:textColor="@color/blue_color_600" android:gravity="center" android:id="@id/crypto_full_terms_and_conditions_link_tv" android:paddingTop="@dimen/padding_16x" android:paddingBottom="@dimen/padding_24x" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/paypal_checkout_crypto_terms_and_conditions" android:textAlignment="gravity" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/button_space_wrapper" style="@style/PYPLTextViewCaption1Style" />
</androidx.constraintlayout.widget.ConstraintLayout>