<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="0.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gift_options_title" style="@style/clg_text_title" />
    <View android:id="@id/clg_radio_button_bottom_divider" android:background="?clg_color_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/clg_space_12" android:importantForAccessibility="no" android:layout_marginStart="@dimen/clg_space_4" android:layout_marginEnd="@dimen/clg_space_4" />
    <com.etsy.android.stylekit.views.CollageCheckbox android:id="@id/gift_options_gift_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/clg_space_8" app:clg_helperText="@string/gift_options_gift_price_hidden" app:clg_small="true" app:clg_text="@string/gift_options_marked_gift" />
    <com.etsy.android.stylekit.views.CollageCheckbox android:id="@id/gift_options_gift_message_checkbox" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:clg_small="true" app:clg_text="@string/gift_options_gift_message" />
    <com.etsy.android.stylekit.views.CollageTextInput android:id="@id/gift_options_gift_message" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textCapSentences" android:imeOptions="actionDone" android:layout_marginStart="@dimen/clg_space_12" android:layout_marginEnd="@dimen/clg_space_12" app:counterMaxLength="150" app:helperText="@string/gift_options_gift_message_hint" app:multiLine="true" />
    <LinearLayout android:orientation="horizontal" android:id="@id/gift_options_gift_wrap_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.etsy.android.stylekit.views.CollageCheckbox android:id="@id/gift_options_gift_wrap_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="2.0" app:clg_small="true" />
        <TextView android:textStyle="bold" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/gift_options_gift_wrap_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gift_options_gift_wrap_details" android:layout_weight="1.0" android:layout_marginStart="@dimen/clg_space_16" style="@style/clg_text_body_small" />
    </LinearLayout>
</LinearLayout>