<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/btn_expand" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listing_panel_see_more" style="@style/clg_button_secondary_alt_small_flush_margins" />
    <LinearLayout android:orientation="vertical" android:id="@id/expansion_section" android:paddingTop="@dimen/clg_space_16" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.etsy.android.stylekit.views.CollageHeadingTextView android:id="@id/txt_subhead_processing_time" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/structured_shipping_processing_time" style="@style/clg_text_title_small" />
        <TextView android:id="@id/txt_processing_time" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fixed_medium" style="@style/clg_text_body_small" />
        <Space android:id="@id/spacer_1" android:layout_width="fill_parent" android:layout_height="@dimen/clg_space_16" />
        <com.etsy.android.stylekit.views.CollageHeadingTextView android:id="@id/txt_subhead_shipping_time" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/structured_shipping_estimated_time" style="@style/clg_text_title_small" />
        <TextView android:id="@id/txt_shipping_time" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fixed_medium" android:lineSpacingExtra="@dimen/fixed_medium" style="@style/clg_text_body_small" />
        <TextView android:id="@id/txt_shipping_disclaimer" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fixed_large" android:text="@string/structured_shipping_message" style="@style/clg_text_body_small" />
        <Space android:id="@id/spacer_2" android:layout_width="fill_parent" android:layout_height="@dimen/clg_space_16" />
        <com.etsy.android.stylekit.views.CollageHeadingTextView android:id="@id/txt_subhead_customs_fees" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/structured_shipping_customs_duties_fees" style="@style/clg_text_title_small" />
        <TextView android:id="@id/txt_customs_fees" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fixed_medium" android:text="@string/structured_shipping_customs_duties_fees_info" style="@style/clg_text_body_small" />
    </LinearLayout>
    <Space android:id="@id/expanded_bottom_space" android:layout_width="fill_parent" android:layout_height="@dimen/clg_space_16" />
</merge>